--- a/drive-core/Cargo.toml
+++ b/drive-core/Cargo.toml
@@ -5,4 +5,8 @@ authors = ["david.bauske@googlemail.com"]
 
 [dependencies]
 i2cdev = "0.3.2"
-nix = "0.10.0"
+
+serde = "1.0.29"
+serde_derive = "1.0.29"
+bincode = "1.0.0"
+bufstream = "0.1.3"
