--- a/drive-core/Cargo.toml
+++ b/drive-core/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["david.bauske@googlemail.com"]
 i2cdev = "0.3.2"
 
 serde = "1.0.29"
-serde_derive = "1.0.29"
 bincode = "1.0.0"
 bufstream = "0.1.3"
+
+messages = { path = "../messages" }
