--- a/logger/Cargo.toml
+++ b/logger/Cargo.toml
@@ -1,15 +1,18 @@
 [package]
-name = "util"
+name = "drive-core"
 version = "0.1.0"
-authors = ["David <david.bauske@googlemail.com>"]
+authors = ["david.bauske@googlemail.com"]
 
 [dependencies]
 serde = "1.0.29"
 serde_derive = "1.0.29"
 bincode = "1.0.0"
-tempdir = "0.3.6"
-lazy_static = "1.0.0"
+bufstream = "0.1.3"
 byteorder = "1.2.1"
+ctrlc = "3.1.0"
+tokio = "0.1.5"
 chrono = "0.4.0"
+mio = "0.6.14"
 
 messages = { path = "../messages" }
+util = { path = "../util" }
