--- a/drive-core/Cargo.toml
+++ b/drive-core/Cargo.toml
@@ -10,6 +10,7 @@ serde = "1.0.29"
 bincode = "1.0.0"
 bufstream = "0.1.3"
 ctrlc = "3.1.0"
+rand = "0.4.2"
 
 messages = { path = "../messages" }
 util = { path = "../util" }
