--- a/logger/Cargo.toml
+++ b/logger/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "drive-core"
+name = "logger"
 version = "0.1.0"
 authors = ["david.bauske@googlemail.com"]
 
@@ -7,10 +7,7 @@ authors = ["david.bauske@googlemail.com"]
 serde = "1.0.29"
 serde_derive = "1.0.29"
 bincode = "1.0.0"
-bufstream = "0.1.3"
 byteorder = "1.2.1"
-ctrlc = "3.1.0"
-tokio = "0.1.5"
 chrono = "0.4.0"
 mio = "0.6.14"
 
