--- a/drive-core/Cargo.toml
+++ b/drive-core/Cargo.toml
@@ -11,6 +11,7 @@ bincode = "1.0.0"
 bufstream = "0.1.3"
 ctrlc = "3.1.0"
 rand = "0.4.2"
+sysfs_gpio = "0.5.3"
 
 messages = { path = "../messages" }
 util = { path = "../util" }
